Doc: Fixing overlapping text in header list

--- a/doc/src/template/style/style.css
+++ b/doc/src/template/style/style.css
@@ -388,9 +388,9 @@
     .shortCut-topleft-inactive
     {
         padding-left: 3px;
+        padding-right: 3px;
         background: transparent url( ../images/sprites-combined.png) no-repeat 0px -58px;
         height: 20px;
-        width: 47px;
     }
     .shortCut-topleft-inactive span
     {
